log/build_2026-05-27_13-24-30/my_py_pkg/stderr.log
  File "/home/milena/ros2_ws/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/number_publisher.py", line 19
    	def publish_number(self);
    	                        ^
SyntaxError: expected ':'

